--- a/Personal Website Project/homeStyle.css
+++ b/Personal Website Project/homeStyle.css
@@ -88,3 +88,43 @@ h3.third {
     color:rosybrown;
     font-size:60px;
 }
+
+
+.wrapper {
+    display:grid;
+    grid-template-columns:2fr 2fr 1fr;
+    grid-auto-rows:minmax(100px, auto);
+    grid-gap:1em;
+    justify-items: center;
+    align-items:center;
+
+}
+
+.wrapper > div {
+    background-color:lightgray;
+    padding:1em;
+}
+
+.box1 {
+    align-self:start;
+    grid-column:1;
+    grid-row:1;
+}
+
+.box2{
+    align-self:end;
+    grid-column:2;
+    grid-row:1;
+    
+}
+.box3 {
+    align-self:center;
+    grid-column:1;
+    grid-row:2;
+}
+
+.box4{
+    grid-column:2;
+    grid-row:2;
+    
+}
