Photos for Home Grid

--- a/Personal Website Project/homeStyle.css
+++ b/Personal Website Project/homeStyle.css
@@ -92,8 +92,8 @@ h3.third {
 
 .wrapper {
     display:grid;
-    grid-template-columns:2fr 2fr 1fr;
-    grid-auto-rows:minmax(100px, auto);
+    grid-template-columns:repeat (8,1fr);
+    grid-template-rows: repeat(8,5w);
     grid-gap:1em;
     justify-items: center;
     align-items:center;
@@ -109,6 +109,7 @@ h3.third {
     align-self:start;
     grid-column:1;
     grid-row:1;
+    grid-column:span ;
 }
 
 .box2{
