--- a/Personal Website Project/homeStyle.css
+++ b/Personal Website Project/homeStyle.css
@@ -64,6 +64,7 @@ h2 {
     overflow:hidden;
 }
 
+/* This is where the photo typography starts */
 h3.first {
     transform:skew(-10deg, -30deg) scaleY(1.5) translate(-5px,75%);
     text-align:center;
@@ -89,43 +90,58 @@ h3.third {
     font-size:60px;
 }
 
-
-.wrapper {
+/* THis is where the image grid starts */
+.container {
     display:grid;
-    grid-template-columns:repeat (8,1fr);
-    grid-template-rows: repeat(8,5w);
-    grid-gap:1em;
-    justify-items: center;
-    align-items:center;
+    grid-template-columns: repeat(4,1fr);
+    grid-gap:10px;
+    margin:10px;
 
 }
 
-.wrapper > div {
-    background-color:lightgray;
-    padding:1em;
-}
-
-.box1 {
-    align-self:start;
-    grid-column:1;
-    grid-row:1;
-    grid-column:span ;
-}
-
-.box2{
-    align-self:end;
-    grid-column:2;
-    grid-row:1;
+.container > div {
+    height:210px;
+    
+    background-size:cover;
+    background-attachment:fixed;
     
 }
-.box3 {
-    align-self:center;
-    grid-column:1;
-    grid-row:2;
-}
-
-.box4{
-    grid-column:2;
-    grid-row:2;
+h2 span {
+    font-size:30px;
     
 }
+
+
+
+.container > div:nth-of-type(1){
+    grid-column:1/3;
+}
+.container > div:nth-of-type(6){
+    grid-column:3/5;
+}
+.container > div:nth-of-type(9){
+    grid-column:3/5;
+}
+
+.container > div:nth-of-type(10){
+    grid-column:1/3;
+}
+
+.bg1{
+    background:url("./homePhotos/4.jpg");
+}
+.bg2{
+    background:url("./homePhotos/10.jpg");
+    
+}
+.bg3{
+    background:url("./homePhotos/11.jpg");
+    background-size:contain;
+}  
+
+
+.container h2 {
+    text-shadow: 5px 5px black;
+    align-self:stretch;
+}
+
