--- a/Personal Website Project/homeStyle.css
+++ b/Personal Website Project/homeStyle.css
@@ -145,3 +145,12 @@ h2 span {
     align-self:stretch;
 }
 
+@media only screen and (max-width:800px){
+    h2{
+        font-size:24px;
+    }
+
+    h2 span {
+        font-size: 18px;
+    }
+}
