--- a/Personal Website Project/projectStyle.css
+++ b/Personal Website Project/projectStyle.css
@@ -45,3 +45,38 @@ li a:hover:not(.active) {
     background-image: linear-gradient(to bottom ,rgba(204,208,217,255), rgba(255,0,0,0.0));    
 }
 
+h2 {
+    padding-top:100px;
+    font-size : 70px;
+    text-align: center;
+    font-family:monospace;
+    color:white;
+}
+
+.flex-container {
+    display:flex;
+    justify-content:center;
+    align-items:center;
+}
+
+.flex-container > div a {
+    color:white;
+}
+
+
+.flex-container > div a:hover {
+    color:lightslategray;
+}
+
+i {
+    font-size: 100px;
+}
+
+h3 {
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    color:white;
+    font-family: monospace;
+    font-size:50px;
+}
